--- a/index.html
+++ b/index.html
@@ -3,13 +3,53 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Slider</title>
+    <title>Slider Jquery</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="estilo.css">
   </head>
   <body>
   <section class="section">
     <div class="container">
+      <div class="columns">
+        <div class="column is-3"></div>
+        <div class="column is-6">
+          <div class="card fondo">
+            <div class="card-content">
+              <div class="content">
+              <center>
+                <div class="main">
+                  <div class="contenedor">
+                    <div class="amarillo" id="primero">
+                      <img class="tamanio" src="imagenes/1.jpg" alt="">
+                    </div>
+                    <div class="rojo">
+                      <img class="tamanio" src="imagenes/2.jpg" alt="">
+                    </div>
+                    <div class="dorado">
+                      <img class="tamanio" src="imagenes/3.jpg" alt="">
+                    </div>
+                    <div class="negro">
+                      <img class="tamanio" src="imagenes/4.jpg" alt="">
+                    </div>
+                    <div class="azul" id="ultimo">
+                      <img class="tamanio" src="imagenes/5.jpg" alt="">
+                    </div>
+                   </div>
+                  <div class="espacios buttons are-small"> 
+                    <button class="button is-primary is-outlined" id="inicio">INICIO</button>
+                    <button class="button is-link is-outlined" id="previo"> ANTERIOR</button>
+                    <button class="button is-danger is-outlined" id="siguiente">SIGUIENTE</button>
+                    <button class="button is-success is-outlined" id="fin">FINAL</button>
+                  </div>
+                </div>
+              </center>
+              </div>
+            </div>
+            </div>
+        </div>
+        <div class="column is-6"></div>
+      </div>
+
     </div>
   </section>
   <script src="JavaScript/jquery.min.js" type="text/javascript"></script>
