--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
   <section class="section">
     <div class="container">
+      <center><h1 class="titulo">Paises por visitar</h1></center>
       <div class="columns">
         <div class="column is-3"></div>
         <div class="column is-6">
@@ -17,21 +18,21 @@
             <div class="card-content">
               <div class="content">
               <center>
-                <div class="main">
+                <div>
                   <div class="contenedor">
                     <div class="amarillo" id="primero">
                       <img class="tamanio" src="imagenes/1.jpg" alt="">
                     </div>
-                    <div class="rojo">
+                    <div >
                       <img class="tamanio" src="imagenes/2.jpg" alt="">
                     </div>
-                    <div class="dorado">
+                    <div >
                       <img class="tamanio" src="imagenes/3.jpg" alt="">
                     </div>
-                    <div class="negro">
+                    <div >
                       <img class="tamanio" src="imagenes/4.jpg" alt="">
                     </div>
-                    <div class="azul" id="ultimo">
+                    <div  id="ultimo">
                       <img class="tamanio" src="imagenes/5.jpg" alt="">
                     </div>
                    </div>
@@ -47,7 +48,7 @@
             </div>
             </div>
         </div>
-        <div class="column is-6"></div>
+        <div class="column is-3"></div>
       </div>
 
     </div>
